@@ -23,7 +23,7 @@ PROJECT_NAME           = TinyXml
 # This could be handy for archiving the generated documentation or 
 # if some version control system is used.
 
-PROJECT_NUMBER         = 2.3.4
+PROJECT_NUMBER = 2.3.5
 
 # The OUTPUT_DIRECTORY tag is used to specify the (relative or absolute) 
 # base path where the generated documentation will be put. 
