@@ -5,8 +5,8 @@ rm ./docs/*
 doxygen dox
 rm -rf ./tinyxml/*
 
-rm tinyxml_2_3_4.zip
-rm tinyxml_2_3_4.tar.gz
+rm tinyxml_2_3_5.zip
+rm tinyxml_2_3_5.tar.gz
 
 rmdir tinyxml
 mkdir tinyxml
@@ -45,6 +45,6 @@ unix2dos ./tinyxml/tinyxml.dsw
 mkdir ./tinyxml/docs
 cp ./docs/* ./tinyxml/docs
 
-tar -zcf tinyxml_2_3_4.tar.gz tinyxml
-zip -r -q -9 tinyxml_2_3_4.zip tinyxml
+tar -zcf tinyxml_2_3_5.tar.gz tinyxml
+zip -r -q -9 tinyxml_2_3_5.zip tinyxml
 
